deploy/base/service-trustee-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: trustee-admin
  namespace: trustee-system
  labels:
    app.kubernetes.io/name: trustee
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: trustee
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
      appProtocol: https
